# Rakefile

./: .gitignore  Cargo.toml  Makefile  README.md  Rakefile  main.rs
examples/: Makefile~  Rakefile
examples/src/: bar.c  bar.h  foo.c
src/: cfg.rs  ct.rs  error.rs  flag.rs  main.rs  rake.rs  ss.rs
