[package]
name = "rakefile"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = { version = "1.10.5", default-features = false }
# My super ultra mega pogchamp library in pure RUST to build your projects in RUST called `robuild`.
robuild = "0.0.29" # Here it is: https://github.com/rakivo/robuild
# robuild = { path = "../robuild" }

[[bin]]
path = "src/rake.rs"
name = "rakefile"
